# Hugo_Barrandon-Thomas_Quentel-Geometrie_Algorithmique-TP4

./: .gitignore  disto.txt
src/: main.cpp
src/geomAlgoLib/: CMakeLists.txt  freeForm.cpp  freeForm.hpp  gaussien.cpp  gaussien.hpp  laplacien.cpp  laplacien.hpp  lissage.cpp  lissage.hpp  taubin.cpp  taubin.hpp  types.hpp
